# library

./: .gitignore  CMakeLists.txt  README.md
src/: Book.cpp  Book.h  Interface.cpp  Interface.h  Library.cpp  Library.h  Reader.cpp  Reader.h  Validation.cpp  Validation.h  main.cpp  utils.cpp  utils.h
